// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package privacy.differentialprivacy.pipelinedp4j.proto;

option java_package = "com.google.privacy.differentialprivacy.pipelinedp4j.proto";
option java_outer_classname = "DpAggregatesProto";
option java_multiple_files = true;

// Results for a single feature within DpAggregates.
message PerFeature {
  double sum = 1;
  repeated double vector_sum = 5;
  double mean = 2;
  // Sorted by rank.
  repeated double quantiles = 4;
  double variance = 3;
}

// The anonymized aggregated result returned by PipelineDP4j. The proto has
// fields for all possible metrics that can be computed. Only metrics requested
// by the user are populated.
message DpAggregates {
  double privacy_id_count = 3;
  double count = 1;
  double sum = 2;
  repeated double vector_sum = 7;
  double mean = 4;
  // Sorted by rank.
  repeated double quantiles = 5;
  double variance = 6;
  map<string, PerFeature> per_feature = 8;
}

// Contribution that belong to the same privacy ID and partition key.
message PrivacyIdContributions {
  message MultiValueContribution {
    repeated double values = 1;
  }

  // Used for metrics like VECTOR_SUM where a single contribution has
  // multiple double values.
  repeated MultiValueContribution multi_value_contributions = 1;
  // Used for metrics like SUM where a single contribution has
  // a single double value.
  repeated double single_value_contributions = 2;
}
